kustomizations/automation/node-red/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: automation
spec:
  selector:
    app: node-red
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
