kustomizations/automation/node-red/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red
spec:
  rules:
  - host: workflows.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: node-red
              port:
                number: 1880
